bug fixing for uploading data

--- a/cherry/pinv.config
+++ b/cherry/pinv.config
@@ -4,6 +4,7 @@ server.socket_host="0.0.0.0"
 tools.trailing_slash.on=False
 #request.dispatch=cherrypy.dispatch.MethodDispatcher() 
 log.screen = True
+log.error_file = 'Web.log'
 [/]
 tools.preprocess.on = True
 tools.postprocess.on = True
